# Reporeaver

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  netlify.toml
.claude/: settings.local.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: backend-build-push.yml  backend-ci.yml  frontend-ci.yml  infra-apply.yml  infra-plan.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/src/devscope/: __init__.py  config.py  logging_config.py  server.py
backend/src/devscope/middleware/: __init__.py  rate_limiter.py
backend/src/devscope/models/: __init__.py  github.py
backend/src/devscope/services/: __init__.py  cache_service.py  github_client.py  llm_service.py  profile_analyzer.py
backend/src/devscope/tools/: __init__.py  analyze_profile.py  evaluate_repository.py  generate_recruiter_summary.py  map_to_job.py
backend/src/reporeaver/: config.py  logging_config.py  server.py
backend/src/reporeaver/middleware/: __init__.py  rate_limiter.py
backend/src/reporeaver/models/: __init__.py  analysis.py  github.py
backend/src/reporeaver/services/: __init__.py  cache_service.py  github_client.py  llm_service.py  profile_analyzer.py
backend/src/reporeaver/tools/: __init__.py  analyze_profile.py  evaluate_repository.py  generate_recruiter_summary.py  map_to_job.py
backend/tests/: conftest.py
backend/tests/unit/: test_profile_analyzer.py  test_username_validation.py
docs/: DEPLOY.md
frontend/: .env.example  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: BackgroundFX.tsx  Footer.tsx  Header.tsx  HealthBadge.tsx  JobMatcher.tsx  Logo.tsx  ProfileAnalyzer.tsx  RecruiterSummary.tsx  RepoEvaluator.tsx  ResultPanel.tsx  SiteHeader.tsx  TabNav.tsx  Workspace.tsx
frontend/src/components/landing/: Hero.tsx  HowItWorks.tsx  StackRow.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Skeleton.tsx  Tooltip.tsx
frontend/src/hooks/: useMcpClient.ts  useStreamingTool.ts  useToolCall.ts
frontend/src/lib/: cn.ts
frontend/src/services/: mcp-client.ts
frontend/src/types/: mcp.ts
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
terraform/modules/netlify/: main.tf  outputs.tf  variables.tf
terraform/modules/railway/: main.tf  outputs.tf  variables.tf
