# =============================================================================
# Reporeaver Backend - GitHub Portfolio Intel MCP Server
# =============================================================================
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reporeaver"
version = "0.1.0"
description = "MCP server that turns AI agents into GitHub portfolio analysts."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Arthur Viegas", email = "arthurpviegas@gmail.com" }]
keywords = ["mcp", "model-context-protocol", "github", "llm", "anthropic"]

dependencies = [
  # MCP / FastMCP
  "mcp[cli]>=1.2.0",

  # Web stack
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "starlette>=0.40.0",

  # Validation / config
  "pydantic>=2.7.0",
  "pydantic-settings>=2.4.0",

  # HTTP / GitHub
  "httpx>=0.27.0",

  # Cache / rate limiting
  "redis[hiredis]>=5.0.0",
  "fastapi-limiter==0.1.6",

  # LLM
  "groq>=0.11.0",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-groq>=0.2.0",

  # Observability
  "structlog>=24.4.0",
  "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "respx>=0.21.0",        # httpx mocking
  "fakeredis>=2.24.0",    # redis test double
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[project.scripts]
reporeaver = "reporeaver.server:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
reporeaver = ["py.typed"]

# --- Tooling ----------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "C4", "SIM", "ASYNC"]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
