# =============================================================================
# Devscope Backend - GitHub Portfolio Intel MCP Server
# =============================================================================
[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devscope"
version = "0.1.0"
description = "MCP server that turns AI agents into GitHub portfolio analysts."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Arthur Viegas", email = "arthurpviegas@gmail.com" }]
keywords = ["mcp", "model-context-protocol", "github", "llm", "anthropic"]

dependencies = [
  # MCP / FastMCP
  "mcp[cli]>=1.27.2",

  # Web stack
  "fastapi>=0.137.0",
  "uvicorn[standard]>=0.49.0",
  "starlette>=1.3.1",

  # Validation / config
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.1",

  # HTTP / GitHub
  "httpx>=0.28.1",

  # Cache / rate limiting
  "redis[hiredis]>=8.0.0",

  # LLM
  "groq>=1.4.0",
  "langchain>=1.3.9",
  "langchain-core>=1.4.7",
  "langchain-groq>=1.1.3",

  # Observability
  "structlog>=26.1.0",
  "orjson>=3.11.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.1.0",
  "pytest-asyncio>=1.4.0",
  "pytest-cov>=7.1.0",
  "respx>=0.23.1",
  "fakeredis>=2.36.1",
  "ruff>=0.15.17",
  "mypy>=2.1.0",
]

[project.scripts]
devscope = "devscope.server:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
devscope = ["py.typed"]

# --- Tooling ----------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "C4", "SIM", "ASYNC"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
